--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }
 
         .modal-content {
-            background: url('https://via.placeholder.com/500x300') no-repeat center center;
+            background: url('img_avatar2.png') no-repeat center center;
             background-size: cover;
             margin: 5% auto;
             padding: 20px;
