--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <a href="https://786promax.github.io/voie.github.io/"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Github</li></a>
             <a href="https://786promax.github.io/voie.github.io/"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Join Us</li></a>
             <button onclick="toggleDarkMode()" id="darkmode-btn" class="transform transition-transform hover:-translate-y-1">
-                <img class="w-8" src="https://via.placeholder.com/50" alt="Dark Mode">
+                <img class="w-8" src="dark.svg" alt="Dark Mode">
             </button>
         </ul>
     </nav>
