--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="modal-content">
             <div class="imgcontainer">
                 <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-                <img src="https://via.placeholder.com/150" alt="Avatar" class="avatar">
+                <img src="op.png" alt="Avatar" class="avatar">
             </div>
             <form id="loginForm" onsubmit="return redirectToSite(event)">
                 <div class="container">
