--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </ul>
     </nav>
 
-    <h2 class="text-center mt-6 text-2xl font-semibold">Login Form</h2>
+    <h2 class="text-center mt-6 text-2xl font-semibold">Enter your password and username here :</h2>
     <div class="flex justify-center mt-4">
         <button onclick="document.getElementById('id01').style.display='block'" class="fancy-button">
             Enter your password
