--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <ul class="flex space-x-6 items-center font-mono text-white">
             <a href="https://786promax.github.io/rocketfuel.github.io/"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Home</li></a>
             <a href="htme.jpg"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">About Us</li></a>
-            <a href="htme.jpg"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Youtube</li></a>
+            <a href="https://www.youtube.com/@KurulusOsman"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Youtube</li></a>
             <a href="htme.jpg"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Join Us</li></a>
             <button onclick="toggleDarkMode()" id="darkmode-btn" class="transform transition-transform hover:-translate-y-1">
                 <img class="w-8" src="dark.svg" alt="Dark Mode">
@@ -174,11 +174,6 @@
             window.location.href = "https://786promax.github.io/voie.github.io/";
         }
 
-        // Toggle dark mode
-        function toggleDarkMode() {
-            const html = document.getElementById('Html');
-            html.classList.toggle('dark');
-        }
     </script>
 </body>
 </html>
