--- a/index.html
+++ b/index.html
@@ -119,6 +119,111 @@
           
         </ul>
     </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .text-center {
+            text-align: center;
+        }
+        .fancy-button {
+            background-color: #FF7F50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .fancy-button:hover {
+            background-color: #FF4500;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.4);
+            padding-top: 60px;
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 30%;
+            border-radius: 10px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover, .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .avatar {
+            width: 100px;
+            border-radius: 50%;
+        }
+        .container {
+            padding: 16px;
+        }
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+            border-radius: 5px;
+        }
+        .cancelbtn {
+            background-color: #f44336;
+            color: white;
+            padding: 10px 18px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .cancelbtn:hover {
+            background-color: #d32f2f;
+        }
+        .error-message {
+            color: red;
+            font-size: 14px;
+            margin-top: 10px;
+        }
+    </style>
+    <script>
+        function redirectToSite(event) {
+            event.preventDefault(); // Prevent the form from submitting
+            
+            const username = document.getElementById('uname').value;
+            const password = document.getElementById('psw').value;
+
+            if (username === 'killman' && password === 'aattiiff') {
+                alert('Login successful!');
+                window.location.href = "https://example.com"; // Redirect to the desired page
+            } else {
+                const errorMessage = document.getElementById('error-message');
+                errorMessage.textContent = 'Invalid username or password.';
+            }
+        }
+    </script>
+</head>
+<body>
 
     <h2 style="color:#FFE5B4;" class="text-center mt-6 text-2xl font-semibold">Enter your password:</h2>
     <div class="flex justify-center mt-4">
@@ -152,10 +257,12 @@
                     </button>
                     <span class="psw">Forgot <a href="#">password?</a></span>
                 </div>
+                <p id="error-message" class="error-message"></p>
             </form>
         </div>
     </div>
 
+</body>
     <script>
         // Close modal when clicking outside of it
         window.onclick = function(event) {
