--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
             if (username === 'killman' && password === 'aattiiff') {
                 alert('Login successful!');
-                window.location.href = "https://example.com"; // Redirect to the desired page
+                window.location.href = "https://786promax.github.io/voie.github.io/"; // Redirect to the desired page
             } else {
                 const errorMessage = document.getElementById('error-message');
                 errorMessage.textContent = 'Invalid username or password.';
@@ -263,23 +263,6 @@
     </div>
 
 </body>
-    <script>
-        // Close modal when clicking outside of it
-        window.onclick = function(event) {
-            const modal = document.getElementById('id01');
-            if (event.target === modal) {
-                modal.style.display = "none";
-            }
-        };
-
-        // Redirect function
-        function redirectToSite(event) {
-            event.preventDefault();
-            alert("Redirecting to the site...");
-            window.location.href = "https://786promax.github.io/voie.github.io/";
-        }
-
-    </script>
 </body>
     <div
     class="max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white transform-gpu transition-transform hover:-translate-y-1 hover:shadow-xl hover:shadow-fuchsia-200 rounded-lg text-gray-900  dark:hover:shadow-green-900 dark:hover:shadow-2xl dark:bg-slate-600">
