--- a/index.html
+++ b/index.html
@@ -119,6 +119,41 @@
           
         </ul>
     </nav>
+</body>
+    <div
+    class="max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white transform-gpu transition-transform hover:-translate-y-1 hover:shadow-xl hover:shadow-fuchsia-200 rounded-lg text-gray-900  dark:hover:shadow-green-900 dark:hover:shadow-2xl dark:bg-slate-600">
+    <div class="rounded-t-lg h-32 overflow-hidden">
+        <img class="object-cover object-center h-60 w-96" src='/back.jpg' alt='Woman looking front'>
+    </div>
+    <div class="mx-auto w-32 h-32 relative -mt-16 border-4 border-white dark:border-black rounded-full overflow-hidden">
+        <img class="object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src='/Pfp.webp' alt='Woman looking front'>
+    </div>
+    <div class="text-center mt-2">
+        <h2 class="font-semibold dark:text-gray-50">Aatif</h2>
+        <p class="text-gray-500 dark:text-gray-200">Owner/Developer</p>
+    </div>
+    <ul class="py-4 mt-2 text-gray-700 flex items-center justify-around">
+        <li class="flex flex-col items-center justify-around">
+            <img id="user" src="user.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
+
+            <div class="dark:text-white font-semibold">99+</div>
+        </li>
+        <li class="flex flex-col items-center justify-between">
+            <img id="train" src="train.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
+
+            <div class="dark:text-white font-semibold">99+</div>
+        </li>
+        <li class="flex flex-col items-center justify-around">
+            <img id="star" src="star.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
+
+            <div class="dark:text-white font-semibold">99+</div>
+        </li>
+    </ul>
+    <div class="p-4 border-t mx-8 mt-2">
+    </div>
+</div>
+</body>
+<script src="spaghetti.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -263,40 +298,4 @@
     </div>
 
 </body>
-</body>
-    <div
-    class="max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white transform-gpu transition-transform hover:-translate-y-1 hover:shadow-xl hover:shadow-fuchsia-200 rounded-lg text-gray-900  dark:hover:shadow-green-900 dark:hover:shadow-2xl dark:bg-slate-600">
-    <div class="rounded-t-lg h-32 overflow-hidden">
-        <img class="object-cover object-center h-60 w-96" src='/back.jpg' alt='Woman looking front'>
-    </div>
-    <div class="mx-auto w-32 h-32 relative -mt-16 border-4 border-white dark:border-black rounded-full overflow-hidden">
-        <img class="object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src='/Pfp.webp' alt='Woman looking front'>
-    </div>
-    <div class="text-center mt-2">
-        <h2 class="font-semibold dark:text-gray-50">Supermutec</h2>
-        <p class="text-gray-500 dark:text-gray-200">Discord Bot Developer</p>
-    </div>
-    <ul class="py-4 mt-2 text-gray-700 flex items-center justify-around">
-        <li class="flex flex-col items-center justify-around">
-            <img id="user" src="user.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-
-            <div class="dark:text-white font-semibold">0</div>
-        </li>
-        <li class="flex flex-col items-center justify-between">
-            <img id="train" src="train.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-
-            <div class="dark:text-white font-semibold">0</div>
-        </li>
-        <li class="flex flex-col items-center justify-around">
-            <img id="star" src="star.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-
-            <div class="dark:text-white font-semibold">0</div>
-        </li>
-    </ul>
-    <div class="p-4 border-t mx-8 mt-2">
-        <a href="Projects/index.html"><button class="w-1/2 block mx-auto rounded-full bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 hover:shadow-lg font-semibold text-white px-6 py-2 transform-gpu transition-transform hover:-translate-y-1">Projects</button></a>
-    </div>
-</div>
-</body>
-<script src="spaghetti.js"></script>
 </html>
