--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div
     class="max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white transform-gpu transition-transform hover:-translate-y-1 hover:shadow-xl hover:shadow-fuchsia-200 rounded-lg text-gray-900  dark:hover:shadow-green-900 dark:hover:shadow-2xl dark:bg-slate-600">
     <div class="rounded-t-lg h-32 overflow-hidden">
-        <img class="object-cover object-center h-60 w-96" src='/back.jpg' alt='Woman looking front'>
+        <img class="object-cover object-center h-60 w-96" src='https://img.freepik.com/free-photo/ultra-detailed-nebula-abstract-wallpaper-4_1562-749.jpg' alt='kkkm'>
     </div>
     <div class="mx-auto w-32 h-32 relative -mt-16 border-4 border-white dark:border-black rounded-full overflow-hidden">
         <img class="object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src='/Pfp.webp' alt='Woman looking front'>
