--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </span>
         <ul class="flex space-x-6 items-center font-mono text-white">
             <a href="https://786promax.github.io/rocketfuel.github.io/"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Home</li></a>
-            <a href="https://github.com/SuperMuctec"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">About Us</li></a>
+            <a href="https://github.com/786promax"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">About Us</li></a>
             <a href="https://www.youtube.com/@KurulusOsmanUrduatv"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Youtube</li></a>
             <a href="https://discord.gg/nickuc-com-plugins-527913497435308042"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Join Us</li></a>
           
