--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
 </head>
 <body>
 
-    <h2 style="color:#FFE5B4;" class="text-center mt-6 text-2xl font-semibold">Enter your password:</h2>
+    <h2 style="color:#FFE5B4;" class="text-center mt-6 text-2xl font-semibold">Don't click the button below :</h2>
     <div class="flex justify-center mt-4">
         <button onclick="document.getElementById('id01').style.display='block'" class="fancy-button">
-            Enter password for secret hehe
+            Don't click me
         </button>
     </div>
 
@@ -281,7 +281,7 @@
                     <label for="psw"><b>Password</b></label>
                     <input type="password" id="psw" placeholder="Enter Password" required>
 
-                    <button type="submit" class="fancy-button">Don't click me</button>
+                    <button type="submit" class="fancy-button">Enter password</button>
                     <label>
                         <input type="checkbox" checked="checked" name="remember"> Remember me
                     </label>
