--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -281,7 +280,7 @@
                     <label for="psw"><b>Password</b></label>
                     <input type="password" id="psw" placeholder="Enter Password" required>
 
-                    <button type="submit" class="fancy-button">Enter password</button>
+                    <button type="submit" class="fancy-button">Login</button>
                     <label>
                         <input type="checkbox" checked="checked" name="remember"> Remember me
                     </label>
