--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
             <a href="https://discord.gg/nickuc-com-plugins-527913497435308042"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Join Us</li></a>
           
         </ul>
+          <button class="block lg:hidden text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M3 5h14a1 1 0 110 2H3a1 1 0 010-2zM3 9h14a1 1 0 110 2H3a1 1 0 010-2zM3 13h14a1 1 0 110 2H3a1 1 0 010-2z" clip-rule="evenodd" />
+            </svg>
+        </button>
     </nav>
 </body>
     <div
