--- a/index.html
+++ b/index.html
@@ -261,6 +261,15 @@
             }
         }
     </script>
+    <script>
+        // JavaScript for Hamburger Menu
+        const hamburger = document.getElementById('hamburger');
+        const mobileMenu = document.getElementById('mobileMenu');
+
+        hamburger.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
 </head>
 <body>
 
