--- a/index.html
+++ b/index.html
@@ -111,18 +111,17 @@
         <span class="px-6 py-2 font-semibold text-xl text-white transition-transform transform hover:-translate-y-1">
             Aatif's Website
         </span>
-        <ul class="hidden lg:flex space-x-4">
-            <a href="https://786promax.github.io/rocketfuel.github.io/"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Home</li></a>
-            <a href="https://github.com/786promax"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">About Us</li></a>
-            <a href="https://www.youtube.com/@KurulusOsmanUrduatv"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Youtube</li></a>
-            <a href="https://discord.gg/nickuc-com-plugins-527913497435308042"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Join Us</li></a>
-          
-        </ul>
-           <button id="hamburger" class="lg:hidden text-white">
+        <button id="hamburger" class="lg:hidden text-white">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M3 5h14a1 1 0 110 2H3a1 1 0 010-2zM3 9h14a1 1 0 110 2H3a1 1 0 010-2zM3 13h14a1 1 0 110 2H3a1 1 0 010-2z" clip-rule="evenodd" />
             </svg>
         </button>
+        <ul id="mobileMenu" class="hidden flex-col lg:flex lg:flex-row lg:space-x-4 lg:items-center lg:static absolute top-[74px] left-0 w-full bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 lg:bg-transparent lg:shadow-none shadow-lg">
+            <a href="https://786promax.github.io/rocketfuel.github.io/"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Home</li></a>
+            <a href="https://github.com/786promax"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">About Us</li></a>
+            <a href="https://www.youtube.com/@KurulusOsmanUrduatv"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Youtube</li></a>
+            <a href="https://discord.gg/nickuc-com-plugins-527913497435308042"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Join Us</li></a>
+        </ul>
     </nav>
 </body>
     <div
