--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body class="flex flex-col items-start bg-gray-100 dark:bg-gray-900">
     <nav class="flex justify-between w-full h-[74px] bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 p-4">
         <span class="px-6 py-2 font-semibold text-xl text-white transition-transform transform hover:-translate-y-1">
-            Aatif's Website
+            Mr.Kind
         </span>
         <button id="hamburger" class="lg:hidden text-white">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
