--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <path fill-rule="evenodd" d="M3 5h14a1 1 0 110 2H3a1 1 0 010-2zM3 9h14a1 1 0 110 2H3a1 1 0 010-2zM3 13h14a1 1 0 110 2H3a1 1 0 010-2z" clip-rule="evenodd" />
             </svg>
         </button>
-        <ul id="mobileMenu" class="hidden flex-col lg:flex lg:flex-row lg:space-x-4 lg:items-center lg:static absolute top-[74px] left-0 w-full bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 lg:bg-transparent lg:shadow-none shadow-lg">
+        <ul id="mobileMenu" class="hidden flex-col lg:flex lg:flex-row lg:space-x-4 lg:items-center w-full bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 lg:bg-transparent lg:shadow-none shadow-lg">
             <a href="https://786promax.github.io/rocketfuel.github.io/"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Home</li></a>
             <a href="https://github.com/786promax"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">About Us</li></a>
             <a href="https://www.youtube.com/@KurulusOsmanUrduatv"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Youtube</li></a>
@@ -260,7 +260,7 @@
             }
         }
     </script>
-    <script>
+  <script>
         // JavaScript for Hamburger Menu
         const hamburger = document.getElementById('hamburger');
         const mobileMenu = document.getElementById('mobileMenu');
